# showtime

./: .gitignore  CHANGELOG.md  showtime.cabal  stack.yaml
app/: Main.hs
src/: AppConfig.hs  AppEnv.hs  Application.hs  Cast.hs  CastStorage.hs  FileStorage.hs  Storage.hs
src/Cast/: Cast.hs  Commands.hs  Storage.hs
src/Episodes/: Commands.hs  Episode.hs  Storage.hs
src/Topics/: Commands.hs  Storage.hs  Topic.hs
test/: EpisodeSpec.hs  HostSpec.hs  Spec.hs
