cabal-version:      2.4
name:               showtime
version:            0.1.0.0

author:             John Cinnamond
maintainer:         john@cinnamond.me.uk

extra-source-files: CHANGELOG.md
                  , people

common shared-properties
    default-language:   Haskell2010
    ghc-options:        -Wall -Wunused-packages -Werror
    default-extensions: OverloadedStrings, DerivingStrategies, NamedFieldPuns
    build-depends:      base ^>=4.17.0.0

library
    import:          shared-properties
    hs-source-dirs:  src
    exposed-modules: Storage
                   , Cast
                   , CastStorage
                   , AppEnv
                   , Topics.Commands
                   , Topics.Storage
                   , Topics.Topic
    build-depends:   text
                   , fmt
                   , filepath
                   , directory ^>=1.3.8.1

executable showtime-exe
    import:         shared-properties
    main-is:        Main.hs
    build-depends:  random ^>= 1.2.0
                  , text
                  , showtime
    hs-source-dirs: app
