cabal-version:      2.4
name:               showtime
version:            0.1.0.0

author:             John Cinnamond
maintainer:         john@cinnamond.me.uk

extra-source-files: CHANGELOG.md
                  , people

common shared-properties
    default-language:   Haskell2010
    ghc-options:        -Wall -Wunused-packages -Werror
    default-extensions: OverloadedStrings 
                      , DerivingStrategies
                      , NamedFieldPuns
                      , OverloadedRecordDot 
    build-depends:      base ^>=4.17.0.0

library
    import:          shared-properties
    hs-source-dirs:  src
    exposed-modules: Storage
                   , FileStorage
                   , Cast.Cast
                   , Cast.Commands
                   , Cast.Storage
                   , Application
                   , Topics.Commands
                   , Topics.Storage
                   , Topics.Topic
    build-depends:   text
                   , fmt
                   , filepath
                   , transformers ^>=0.5.6.2
                   , directory ^>=1.3.8.1

executable showtime-exe
    import:         shared-properties
    main-is:        Main.hs
    build-depends:  random ^>= 1.2.0
                  , text
                  , showtime
                  , transformers ^>=0.5.6.2
    hs-source-dirs: app

test-suite showtime-test
    import:             shared-properties
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      HostSpec
    build-tool-depends: hspec-discover:hspec-discover == 2.*
    build-depends:      hspec == 2.*
                      , showtime
                      , transformers ^>=0.5.6.2
                      , text
